<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tracker</string>
    <string name="datePattern">dd/MM/yyyy</string>
    <string name="run">Run</string>
    <string name="bike">Bike</string>
    <string name="swimming">Swimming</string>
    <string name="date_needed">Do you need insert a date.</string>
    <string name="type_needed">Do you need insert a type.</string>
    <string name="time_needed">Do you need insert a time.</string>
    <string name="workout_saved">Workout saved.</string>
    <string name="total_time_spent">You\'ve spent %h hours and %m minutes in workouts.</string>
    <string name="time_spent">%h hours and %m minutes</string>
    <string name="header_time">Time spent</string>
    <string name="header_type">Type</string>
    <string name="header_date">Date</string>
    <string name="save">Save</string>
    <string name="insert_time">Insert Time</string>
    <string name="insert_date">Insert Date</string>
    <string name="delete_dialog_message">Do you want delete this workout?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

</resources>